tests/lean/namedHoles.lean.expected.out
namedHoles.lean:9:7-9:14: error: application type mismatch
  f ?m ?m
argument
  ?m
has type
  Nat
but is expected to have type
  Bool
g ?m ?m : Nat
20
foo (fun (x : Nat) => ?m x) ?m : Nat
bla ?m fun (x : Nat) => ?m : Nat
namedHoles.lean:35:38-35:43: error: synthetic hole has already been defined with an incompatible local context
boo (fun (x : Nat) => ?m x) fun (y : Bool) => sorry : Nat
11
12
namedHoles.lean:58:26-58:31: error: synthetic hole has already been defined and assigned to value incompatible with the current context
  y
